<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="#375F5B">

    <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_my_qtourist"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp" android:fontFamily="casual" android:textColor="#FFFFFF"/>

    <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" android:layout_marginTop="20dp" android:layout_below="@+id/name_edittext"
            android:textAlignment="center" android:fontFamily="serif-monospace" android:text="test@test.com"/>
    <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:layout_below="@id/email_edittext"
            android:layout_marginTop="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" android:fontFamily="serif-monospace" android:textAlignment="center"
            android:text="testtest"/>
    <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:visibility="visible"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" android:layout_marginTop="100dp" android:layout_below="@+id/title_textview"
            android:fontFamily="serif-monospace" android:textAlignment="center" android:inputType="textShortMessage"
            android:text="test"/>
    <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="32dp" android:layout_below="@+id/password_edittext"
            android:layout_centerVertical="false" android:layout_centerHorizontal="true" app:cornerRadius="20dp"
            style="@style/Widget.Material3.Button" android:textSize="14sp"/>
    <Button
            android:text="@string/already_registered_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/signin_button" android:layout_marginTop="32dp"
            android:layout_below="@+id/register_button" style="@style/Widget.Material3.Button.TextButton"
            android:textColor="#272727" android:textSize="14sp" android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textStyle="italic" android:layout_centerHorizontal="true"/>

</RelativeLayout>
