<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="#375F5B">

    <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_my_qtourist"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF" android:fontFamily="casual"/>

    <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:layout_below="@id/title_textview"
            android:layout_marginTop="100dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" android:layout_centerVertical="true" android:fontFamily="serif-monospace"
            android:textAlignment="center" android:textAllCaps="false"
            android:text="test@test.com"/>

    <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:layout_below="@id/email_edittext"
            android:layout_marginTop="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" android:fontFamily="serif-monospace" android:textAlignment="center"
            android:password="false" android:text="testtest"/>

    <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            style="@style/Widget.Material3.Button" android:textSize="14sp"
            android:layout_centerHorizontal="true"
            android:width="100dp" app:cornerRadius="20dp" android:fontFamily="sans-serif-medium"
            android:layout_marginTop="32dp" android:layout_below="@id/password_edittext"/>
    <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_here"
            style="@style/Widget.Material3.Button"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true" android:layout_toRightOf="@id/reset_button"
            app:cornerRadius="20dp"
            android:fontFamily="sans-serif-medium" android:layout_marginTop="32dp"
            android:layout_below="@+id/reset_button" android:layout_marginLeft="-100dp"/>
    <Button
            android:id="@+id/back_button"
            android:text="@string/forgot_password_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            android:textColor="#272727" android:textSize="14sp" android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:layout_marginTop="32dp"
            android:layout_below="@id/register_button" android:layout_centerHorizontal="true"
            android:textStyle="italic"/>

</RelativeLayout>
